@@ -66,7 +66,7 @@ the code to parse MS-DOS listings -any takers?
     <td valign="top">action</td>
     <td valign="top">the ftp action to perform, defaulting to &quot;send&quot;.  
                      Currently supports &quot;put&quot;, &quot;get&quot;,
-                     &quot;del&quot;, &quot;list&quot; and &quot;mkdir&quot;.</td>
+                     &quot;del&quot;, &quot;list&quot;, &quot;chmod&quot; and &quot;mkdir&quot;.</td>
     <td valign="top" align="center">No</td>
   </tr>
   <tr>
@@ -103,6 +103,18 @@ the code to parse MS-DOS listings -any takers?
     <td valign="top">separator</td>
     <td valign="top">sets the file separator used on the ftp server.
                      Defaults to &quot;/&quot;.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
+  <tr>
+    <td valign="top">umask</td>
+    <td valign="top">sets the default file permissions for new files,
+                     unix only.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
+  <tr>
+    <td valign="top">chmod</td>
+    <td valign="top">sets or changes file permissions for new or existing files,
+      unix only. If used with a put action, chmod will be issued for each file.</td>
     <td valign="top" align="center">No</td>
   </tr>
   <tr>
@@ -251,7 +263,7 @@ remotedir attribute.</p>
 directory.  As with all other actions, the directory separator character must be correct
 according to the desires of the FTP server.</p>
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
